feat: [#M2A01-pt02] Adicionando nodemon como dependência de desenvolvimento

--- a/CineHouse/package.json
+++ b/CineHouse/package.json
@@ -11,5 +11,8 @@
     "javascript"
   ],
   "author": "Marcelo Diament",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
